tests/badly_positioned_react/badly_positioned_react.exp
Error ---------------------------------------------------------------------------------------------------- test.js:23:21

Cannot call `create` with `create1<...>(...)` bound to `Component` because inexact object type [1] is incompatible with
exact object type [2] in type argument `P` [3]. [incompatible-exact]

   test.js:23:21
    23| const Foo1 = create(create1<{||}>(Foo));
                            ^^^^^^^^^^^^^^^^^^

References:
   test.js:6:34
     6|   Component: React.ComponentType<{...P, ...{}}>,
                                         ^^^^^^^^^^^^^ [1]
   test.js:23:29
    23| const Foo1 = create(create1<{||}>(Foo));
                                    ^^^^ [2]
   <BUILTINS>/react.js:248:38
   248|   declare export type ComponentType<-P> = React$ComponentType<P>;
                                             ^ [3]



Found 1 error
